vlib/v/checker/tests/const_match_type_mismatch_range_err.out
vlib/v/checker/tests/const_match_type_mismatch_range_err.vv:6:2: error: the low and high parts of a range expression, should have matching types
    4 | 
    5 | match 5 {
    6 |     start...end {
      |     ~~~~~~~~~~~
    7 |         println(start)
    8 |     }
Details: 
 low part type: string
high part type: int literal
vlib/v/checker/tests/const_match_type_mismatch_range_err.vv:6:2: error: the range type and the match condition type should match
    4 | 
    5 | match 5 {
    6 |     start...end {
      |     ~~~~~~~~~~~
    7 |         println(start)
    8 |     }
Details: 
match condition type: int
          range type: string
vlib/v/checker/tests/const_match_type_mismatch_range_err.vv:6:2: error: match branch range expressions need the start value to be known at compile time (only enums, const or literals are supported)
    4 | 
    5 | match 5 {
    6 |     start...end {
      |     ~~~~~
    7 |         println(start)
    8 |     }
vlib/v/checker/tests/const_match_type_mismatch_range_err.vv:13:2: error: the low and high parts of a range expression, should have matching types
   11 | 
   12 | z := match 5 {
   13 |     start...end {
      |     ~~~~~~~~~~~
   14 |         2
   15 |     }
Details: 
 low part type: string
high part type: int literal
vlib/v/checker/tests/const_match_type_mismatch_range_err.vv:13:2: error: the range type and the match condition type should match
   11 | 
   12 | z := match 5 {
   13 |     start...end {
      |     ~~~~~~~~~~~
   14 |         2
   15 |     }
Details: 
match condition type: int
          range type: string
vlib/v/checker/tests/const_match_type_mismatch_range_err.vv:13:2: error: match branch range expressions need the start value to be known at compile time (only enums, const or literals are supported)
   11 | 
   12 | z := match 5 {
   13 |     start...end {
      |     ~~~~~
   14 |         2
   15 |     }
